feat(api): add auth service (#18)
* feat: add auth service

* ref: cleanup api client

* doc: add swagger docs

* doc: added swagger doc + generated types

* refactor: move user profile endpoin

* refactor: replace sub with id for clarity

* fix: wrong response dto doc
